--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,8 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <script src="https://kit.fontawesome.com/a12c64fc2c.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://kit.fontawesome.com/2f464bc51b.css" crossorigin="anonymous">
+  <script src="https://kit.fontawesome.com/2f464bc51b.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <app-root></app-root>
